--- a/app/src/main/res/drawable/shape_grey.xml
+++ b/app/src/main/res/drawable/shape_grey.xml
@@ -2,7 +2,9 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle"   >
-    <stroke android:width="1dip" android:color="@color/white" />
+    <stroke android:width="1dip" android:color="@color/grey" >
+
+    </stroke>
     <corners
         android:radius="11dp"   >
     </corners>
