--- a/app/src/main/res/layout/activity_reg_mail.xml
+++ b/app/src/main/res/layout/activity_reg_mail.xml
@@ -48,11 +48,23 @@
         android:layout_marginTop="20dp"
         android:inputType="textEmailAddress"
         android:background="@drawable/shape_grey"
-        android:backgroundTint="#F8F8F8"
+        android:paddingLeft="3dp"
         android:fontFamily="@font/sfprodisplay"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvEnterEmail" />
+
+    <TextView
+        android:id="@+id/tvNotFound"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="30dp"
+        android:background="@drawable/shape_grey"
+        android:visibility="invisible"
+        android:text="😔, Похоже, этой почты нет в нашей базе"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etRegEmail" />
 
     <Button
         android:id="@+id/btnRegNext"
