--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,8 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Auth.LoginActivity">
-
+    tools:context=".auth.view.LoginActivity">
+    <TextView
+        android:id="@+id/tvBackLogin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="назад"
+        android:textSize="15sp"
+        android:textColor="@color/black"
+        android:fontFamily="@font/sfprodisplay"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="30dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
     <TextView
         android:id="@+id/tvLogin"
         android:layout_width="wrap_content"
@@ -15,13 +26,13 @@
         android:textColor="@color/black"
         android:textSize="15sp"
         android:fontFamily="@font/sfprodisplay"
-        app:layout_constraintBottom_toTopOf="@+id/imageView"
+        app:layout_constraintBottom_toTopOf="@+id/imgLogin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imgLogin"
         android:layout_width="170dp"
         android:layout_height="170dp"
         android:layout_marginTop="50dp"
@@ -30,41 +41,49 @@
         app:layout_constraintTop_toBottomOf="@+id/tvLogin"
         app:srcCompat="@drawable/login" />
 
-    <EditText
-        android:id="@+id/etEmail"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayout"
         android:layout_width="343dp"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
-        android:hint="Email"
-        android:paddingLeft="3dp"
         android:background="@drawable/shape_grey"
-        android:fontFamily="@font/sfprodisplay"
-        android:inputType="textEmailAddress"
+        app:boxStrokeWidth="0dp"
+        app:boxStrokeWidthFocused="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/imgLogin">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/etEmail"
+            android:layout_width="343dp"
+            android:layout_height="50dp"
+            android:background="@drawable/shape_grey"
+            android:fontFamily="@font/sfprodisplay"
+            android:hint="email"
+            android:inputType="textEmailAddress" />
+    </com.google.android.material.textfield.TextInputLayout>
+
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="343dp"
         android:layout_height="50dp"
+        android:background="@drawable/shape_grey"
+        app:boxStrokeWidth="0dp"
+        app:boxStrokeWidthFocused="0dp"
+        app:endIconMode="password_toggle"
+        android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etEmail"
-        app:endIconMode="password_toggle"
-        android:background="@drawable/shape_grey"
-        android:layout_marginTop="20dp"
-        app:boxStrokeWidth="0dp"
-        app:boxStrokeWidthFocused="0dp">
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etPass"
             android:layout_width="343dp"
             android:layout_height="50dp"
             android:background="@drawable/shape_grey"
-            android:hint="Password"
-            android:paddingLeft="3dp"
             android:fontFamily="@font/sfprodisplay"
+            android:hint="Password"
             android:inputType="textPassword"
-            />
+            android:paddingLeft="3dp" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
@@ -91,7 +110,4 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
-
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
