--- a/app/src/main/res/layout/activity_sub.xml
+++ b/app/src/main/res/layout/activity_sub.xml
@@ -4,53 +4,57 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".firstStep.ProfessionActivity">
+    tools:context=".firstStep.SubActivity">
+
     <TextView
-        android:id="@+id/tvBackSubject"
+        android:id="@+id/tvBackLetsGo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="назад"
-        android:textSize="15sp"
-        android:fontFamily="@font/sfprodisplay"
-        android:textColor="@color/black"
-        android:layout_marginLeft="40dp"
+        android:layout_marginLeft="35dp"
         android:layout_marginTop="30dp"
+        android:fontFamily="@font/sfprodisplay"
+        android:text="назад"
+        android:textColor="@color/black"
+        android:textSize="15sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/tvFirstStepSubject"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
+        android:fontFamily="@font/sfprodisplay"
         android:text="Шаг первый. Базовая информация"
         android:textColor="@color/black"
         android:textSize="15sp"
-        android:fontFamily="@font/sfprodisplay"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/tvChoice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:layout_marginRight="30dp"
+        android:layout_marginRight="5dp"
         android:fontFamily="@font/sfprodisplay"
-        android:text="Теперь укажи название твоей \nпрофессии"
+        android:text="Выбери, в какой области хочешь \nработать?"
         android:textColor="@color/black"
         android:textSize="23sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvFirstStepSubject" />
+
     <TextView
-        android:id="@+id/tvChoiceOne"
-        android:layout_width="wrap_content"
+        android:id="@+id/tvChoiceOneSub"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginRight="170dp"
+        android:layout_marginLeft="35dp"
         android:layout_marginTop="10dp"
         android:fontFamily="@font/sfprodisplay"
         android:gravity="left"
-        android:text="Выбери одну профессию"
+        android:text="Выбери область. Одну или несколько"
         android:textColor="@color/grey"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -67,20 +71,20 @@
         app:boxStrokeWidthFocused="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvChoiceOne">
+        app:layout_constraintTop_toBottomOf="@+id/tvChoiceOneSub">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/searchProfession"
+            android:id="@+id/searchSubject"
             android:layout_width="343dp"
             android:layout_height="50dp"
             android:background="@drawable/shape_grey"
             android:fontFamily="@font/sfprodisplay"
-            android:hint="Введи название профессии"
+            android:hint="Введи название области"
             android:inputType="textEmailAddress" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvProfession"
+        android:id="@+id/rvSubject"
         android:layout_width="343dp"
         android:layout_height="370dp"
         android:layout_marginTop="10dp"
@@ -90,18 +94,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tilName"
         tools:listitem="@layout/list_item" />
+
     <Button
-        android:id="@+id/btnProfession"
+        android:id="@+id/btnSubject"
         android:layout_width="343dp"
         android:layout_height="50dp"
-        android:text="Далее"
-        android:fontFamily="@font/sfprodisplay"
+        android:layout_marginBottom="50dp"
         android:background="@drawable/shape_grey"
         android:backgroundTint="#F8F8F8"
-        android:layout_marginBottom="50dp"
+        android:fontFamily="@font/sfprodisplay"
+        android:text="Далее"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
