--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:background="@color/violet"
     android:layout_height="match_parent"
-    tools:context=".Activity.WelcomeActivity">
+    tools:context=".activity.WelcomeActivity">
 
     <TextView
         android:id="@+id/tvHello"
